# SSM_MIDAS

./: .gitignore  MC_SIMUL.py  README.txt  SSM_MIDAS_FORECAST.py  SSM_MIDAS_OOS.py  adl_midas.py  data_management.py  midas_base.py  pyproject.toml  recursive_rmse_midas.py  stationnary_data.xlsx  utils.py
TABLE_1_2_3/: table1.txt  table3.txt
TABLE_4_5/: Table_4B_PanelD_Multiplicative_MIDAS.xlsx  Table_5_PanelA_Multiplicative_MIDAS.xlsx  Table_5_PanelB_MIDAS.xlsx  Table_5_PanelD_MIDAS.xlsx  Table_5_PanelD_Multiplicative_MIDAS.xlsx  table_4_5.py
Table_7/: forecast_3_2023.xlsx  forecast_4_2023.xlsx  forecast_5_2023.xlsx  forecast_6_2023.xlsx  forecast_7_2023.xlsx  forecast_8_2023.xlsx  rmse_1_2024.xlsx  rmse_5_2024.xlsx  rmse_8_2024.xlsx
data/: data.xlsx  y_sparse.xlsx
scripts/: data_prep.py  mc_simulations.py  ssm_midas_oos.py  ssm_midas_rmse.py
scripts/results/table_1_2_3/: table2.txt
scripts/results/table_4_5/: Table_4A_PanelA_MIDAS.xlsx  Table_4A_PanelA_Multiplicative_MIDAS.xlsx  Table_4A_PanelB_MIDAS.xlsx  Table_4A_PanelB_Multiplicative_MIDAS.xlsx  Table_4B_PanelC_MIDAS.xlsx  Table_4B_PanelC_Multiplicative_MIDAS.xlsx  Table_4B_PanelD_MIDAS.xlsx  Table_5_PanelA_MIDAS.xlsx  Table_5_PanelA_Multiplicative_MIDAS.xlsx  Table_5_PanelB_MIDAS.xlsx  (+6 more)
src/dgp/: simulate.py
src/evaluation/: data_management.py  model_selection.py  recursive_table7.py  table3_population.py
src/midas/: adl_midas.py  forecast.py  midas_base.py  midas_fit.py
src/ssm/: forecast.py  kalman_two_series.py  kalman_weights.py  likelihood.py  measurement.py  params.py  periodic_kf.py
(+23 files in other folders)
